# NiimPrintX

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  NOTICE.md  README.md  REVIEW-ROUND17.md  REVIEW_ROUND14.md  SECURITY.md  TODO.md  UPSTREAM_ISSUES.md  UPSTREAM_PULL_REQUESTS.md  entitlements.plist  pyproject.toml  requirements-ci.txt  requirements.txt  ruff.toml
.github/: copilot-instructions.md  dependabot.yml  git-standards.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: _build-linux.yaml  _build-macos.yaml  _build-windows.yaml  ci.yaml  mac-dmg-builder.sh  python-app.yml  tag.yaml
NiimPrintX/: __init__.py
NiimPrintX/cli/: __main__.py  command.py  helper.py
NiimPrintX/nimmy/: __init__.py  bluetooth.py  exception.py  helper.py  logger_config.py  packet.py  printer.py  types.py  userconfig.py
NiimPrintX/ui/: AppConfig.py  SplashScreen.py  UserConfig.py  __main__.py  config.py  main.py  types.py
NiimPrintX/ui/component/: CacheManager.py  FontList.py
NiimPrintX/ui/widget/: CanvasOperation.py  CanvasSelector.py  FileMenu.py  IconTab.py  ImageOperation.py  PrintOption.py  PrinterOperation.py  StatusBar.py  TabbedIconGrid.py  TextOperation.py  TextTab.py
assets/linux/: io.github.labbots.NiimPrintX.desktop  io.github.labbots.NiimPrintX.metainfo.xml
docs/: CODE_REVIEW_2026-04-11.md  CODE_REVIEW_ROUND11_2026-04-12.md  CODE_REVIEW_ROUND22_2026-04-12.md  CODE_REVIEW_ROUND23.md  CODE_REVIEW_ROUND23_2026-04-12.md  CODE_REVIEW_ROUND6_2026-04-11.md  CODE_REVIEW_ROUND7_2026-04-11.md  CODE_REVIEW_ROUND8_2026-04-11.md  CODE_REVIEW_ROUND9_2026-04-11.md
docs/audits/: 2026-06-09-in-house-spec-audit.md  README.md
docs/plans/: appconfig-split.md  ble-lifecycle-optimization.md
docs/superpowers/plans/: 2026-04-11-deep-dive-code-review.md  2026-04-11-remaining-issues-plan.md  2026-04-11-review-fixes-phase1-2.md  2026-04-11-upstream-pr-merge.md
docs/superpowers/specs/: 2026-04-13-round23-deep-code-review-design.md
runtime_hooks/macOS/: runtime_hook.py
spec_files/cli_app/: NiimPrintX-linux.spec  NiimPrintX-mac.spec  NiimPrintX-windows.spec
spec_files/ui_app/: NiimPrintX-linux.spec  NiimPrintX-mac.spec  NiimPrintX-windows.spec  runtime_hook_imagemagick.py
tests/: conftest.py  helpers.py  test_appconfig.py  test_bluetooth.py  test_cli.py  test_cli_command.py  test_config.py  test_coverage_gaps.py  test_fontlist.py  test_image_encoding.py  test_integration.py  test_packet.py  test_print_integration.py  test_printer.py  test_printer_operation.py  test_printer_reconnect.py  test_printer_uncovered.py  test_review_fixes.py  test_round22_gaps.py  test_ui_guards.py  test_userconfig.py  test_userconfig_gaps.py  test_utils.py
