[tool.poetry]
name = "NiimPrintX"
version = "0.9.0"
description = "App to print labels using NiimBot printer"
authors = ["Labbots <labbots@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"
packages = [{include = "NiimPrintX"}]

[tool.poetry.scripts]
niimprintx = "NiimPrintX.cli.command:niimbot_cli"
niimprintx-ui = "NiimPrintX.ui.__main__:main"

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
click = "^8.3"
bleak = "^3.0"
loguru = "^0.7.2"
pillow = "^12.1.1"
platformdirs = "^4.0"
rich = "^14.0"
pycairo = {version = "^1.26.0", optional = true}
wand = {version = "^0.6.13", optional = true}
sv-ttk = {version = "^2.6", optional = true}

[tool.poetry.extras]
gui = ["sv-ttk", "pycairo", "wand"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = ">=0.23,<1"
ruff = "^0.15"
pytest-cov = "^5.0"
mypy = "^1.11"

[tool.poetry.group.build]
optional = true

[tool.poetry.group.build.dependencies]
pyinstaller = "^6.19"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
omit = [
    "NiimPrintX/ui/__main__.py",
    "NiimPrintX/ui/main.py",
    "NiimPrintX/ui/SplashScreen.py",
    "NiimPrintX/ui/widget/CanvasOperation.py",
    "NiimPrintX/ui/widget/CanvasSelector.py",
    "NiimPrintX/ui/widget/StatusBar.py",
    "NiimPrintX/ui/widget/IconTab.py",
    "NiimPrintX/ui/widget/TextTab.py",
    "NiimPrintX/ui/widget/TabbedIconGrid.py",
    "NiimPrintX/ui/widget/FileMenu.py",
    "NiimPrintX/ui/widget/ImageOperation.py",
    "NiimPrintX/ui/widget/TextOperation.py",
    "NiimPrintX/ui/widget/PrintOption.py",
    "NiimPrintX/ui/component/__init__.py",
]

[tool.coverage.report]
fail_under = 90

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "NiimPrintX.nimmy.*",
    "NiimPrintX.cli.*",
]
disallow_untyped_defs = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "NiimPrintX.ui.*"
ignore_errors = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
